# PAML

./: .gitignore  LICENSE  Makefile  README.md  build_and_test.sh  pyproject.toml
src/paml/: __init__.py  constants.s  macros.s
src/paml/uint128/: __init__.py  uint128.s
src/paml/uint192/: __init__.py  uint192.s
src/paml/uint256/: __init__.py  uint256.s
test/: test_uint128.py  test_uint192.py  test_uint256.py
