[project]
name = "paml"
version = "0.1.0"
description = "A Python ARM64 math library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uint256"]
include = [
  "src/uint256/*.dylib",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[project.scripts]
build-lib = "os:system" 
